--- a/P1.Rmd
+++ b/P1.Rmd
@@ -277,9 +277,15 @@ print(paste("Desviación estándar de log(GillColor.numeric):", emv_desv_log))
 
 ```
 
+
 ```{r}
 
-# Calculamos el EMV para la media (media muestral) y la desviación estándar de 'GillColor.numeric'
+gillcolor_data <- mushroom.muestra$GillColor.numeric
+
+# Filtramos datos para eliminar valores cero o negativos si es necesario
+gillcolor_data <- gillcolor_data[gillcolor_data > 0]
+
+# Calcular el EMV para la media (media muestral) y la desviación estándar de 'GillColor.numeric'
 EMV_mu_gillcolor <- mean(gillcolor_data, na.rm = TRUE)
 EMV_sigma_gillcolor <- sd(gillcolor_data, na.rm = TRUE)
 
@@ -296,7 +302,7 @@ par(mfrow = c(1, 2)) # Configurar panel de gráficos
 
 # Distribución muestral de 'GillColor.numeric'
 hist(gillcolor_data, 
-     main = "Distribución muestral de 'GillColor.numeric'", 
+     main = "Distribución muestral", 
      xlab = "GillColor (numérico)", 
      col = "lightblue", 
      border = "white", 
@@ -305,7 +311,7 @@ lines(density(gillcolor_data, na.rm = TRUE), col = "darkblue", lwd = 2)
 
 # Distribución teórica de 'GillColor.numeric'
 hist(teorica_gillcolor, 
-     main = "Distribución teórica de 'GillColor.numeric'", 
+     main = "Distribución teórica", 
      xlab = "GillColor (numérico)", 
      col = "lightgreen", 
      border = "white", 
@@ -317,40 +323,44 @@ par(mfrow = c(1, 1))
 
 ```
 
-
 ```{r}
-# Cargar las librerías necesarias
-library(dplyr)
-library(ggplot2)
 
-# Filtrar las observaciones con valores cero en GillColor.numeric
-mushroom_filtrado <- mushroom.muestra %>%
-  filter(GillColor.numeric > 0)
+mushroom.muestra <- rnorm(1000, mean = 50, sd = 10) # Cambia esto por tus datos reales si ya los tienes
 
-# Transformación logarítmica
-mushroom_filtrado$GillColor.log <- log(mushroom_filtrado$GillColor.numeric)
+# Parámetros de la muestra original
+n <- 100 # Tamaño de cada sub-muestra
+num_replicas <- 1000 # Número de muestras para generar la distribución muestral de las medias
 
-# Calcular el EMV de la media y la varianza (desviación estándar)
-emv_media_log <- mean(mushroom_filtrado$GillColor.log)
-emv_var_log <- var(mushroom_filtrado$GillColor.log)  # Varianza muestral
-emv_desv_log <- sqrt(emv_var_log)  # Desviación estándar
+# Crear una lista para almacenar las medias de cada sub-muestra
+medias_muestrales <- numeric(num_replicas)
 
-# Imprimir los resultados
-print(paste("Estimador de máxima verosimilitud de la media (EMV) de log(GillColor.numeric):", emv_media_log))
-print(paste("Estimador de máxima verosimilitud de la desviación estándar de log(GillColor.numeric):", emv_desv_log))
+# Calcular las medias de cada sub-muestra
+for (i in 1:num_replicas) {
+  muestra_sub <- sample(mushroom.muestra, n, replace = TRUE) # Generar sub-muestra con reemplazo
+  medias_muestrales[i] <- mean(muestra_sub)               # Calcular la media de la sub-muestra
+}
 
-# Comparar la distribución muestral con la distribución teórica
-# Histograma de la variable logarítmica
-ggplot(mushroom_filtrado, aes(x = GillColor.log)) +
-  geom_histogram(aes(y = ..density..), bins = 30, fill = "lightblue", alpha = 0.7) +
-  stat_function(fun = dnorm, args = list(mean = emv_media_log, sd = emv_desv_log), 
-                color = "red", size = 1) +
-  labs(title = "Distribución Muestral vs. Distribución Teórica",
-       x = "log(GillColor.numeric)",
+# Calcular el EMV de la media y la desviación estándar de la muestra original
+emv_media <- mean(mushroom.muestra)
+emv_desviacion <- sd(mushroom.muestra) / sqrt(n) # Desviación estándar teórica de la media muestral
+
+# Convertir los datos de medias en un data frame para graficar
+df_medias <- data.frame(medias_muestrales)
+
+# Crear el histograma de las medias muestrales y superponer la curva de densidad teórica
+ggplot(df_medias, aes(x = medias_muestrales)) +
+  geom_histogram(aes(y = ..density..), bins = 30, fill = "lightblue", color = "black", alpha = 0.6) +
+  stat_function(fun = dnorm, args = list(mean = emv_media, sd = emv_desviacion),
+                color = "red", size = 1.2) +
+  labs(title = "Comparación de la Distribución Muestral de Medias y la Distribución Teórica",
+       x = "Medias Muestrales",
        y = "Densidad") +
   theme_minimal()
 
 ```
+
+
+
 
 # Ejercicio 6
 
